src/objects/TR1__Potential__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <description>A Potential Candidate. These could be either those that exists in TR already or created from External Job Boards.</description>
        <inlineHelpText>A Potential Candidate. These could be either those that exists in TR already or created from External Job Boards.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potentials</relationshipLabel>
        <relationshipName>Potentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Related_Job__c</fullName>
        <formula>CASESAFEID( TR1__Resume_Search__r.TR1__Job__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search__c</fullName>
        <description>That Resume Search record that brought the Candidate specified above into TR.</description>
        <inlineHelpText>That Resume Search record that brought the Candidate specified above into TR.</inlineHelpText>
        <label>Resume Search</label>
        <referenceTo>TR1__ResumeSearch__c</referenceTo>
        <relationshipLabel>Potentials</relationshipLabel>
        <relationshipName>Potentials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A Unique Identifier to prevent duplicate Potentials from being created against a given Resume Search. This is basically a combination of the 18 Characters Long IDs of the Contact and Resume Search records respectively.</description>
        <externalId>true</externalId>
        <inlineHelpText>A Unique Identifier to prevent duplicate Potentials from being created against a given Resume Search. This is basically a combination of the 18 Characters Long IDs of the Contact and Resume Search records respectively.</inlineHelpText>
        <label>UID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Potential</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Contact__c</columns>
        <columns>TR1__Resume_Search__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PID-{0}</displayFormat>
        <label>Potential Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>